# slab-designer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: validation-matrix.md
docs/digitized/shrinkage_chart/: README.md  fig93-crossings.csv  fig93-labeled-crossings.csv  fig93-manifest.json  validated_compressive_stress_table.csv  validated_full_compensation_thresholds.csv  validated_member_expansion_table.csv
docs/reference/aci-360r-10/: chapter-01-introduction-1-1-purpose-and-scope.md  chapter-01-introduction-p-360r-3.md  chapter-02-definitions-p-360r-5.md  chapter-02-definitions.md  chapter-03-slab-types-p-360r-6.md  chapter-03-slab-types.md  chapter-04-soil-support-systems-for-slabs-on-ground.md  chapter-05-loads-p-360r-18.md  chapter-05-loads.md  chapter-06-joints-p-360r-22.md  chapter-06-joints.md  chapter-07-design-of-unreinforced-concrete-slabs-p-.md  chapter-07-design-of-unreinforced-concrete-slabs.md  chapter-08-design-of-slabs-reinforced-for-crack-wid.md  chapter-09-design-of-shrinkage-compensating-concret.md  chapter-09-design-of-shrinkagecompensating-concrete.md  chapter-10-design-of-post-tensioned-slabs-on-ground.md  chapter-11-fiber-reinforced-concrete-slabs-on-groun.md  chapter-12-structural-slabs-on-ground-supporting-bu.md  chapter-13-design-of-slabs-for-refrigerated-facilit.md  chapter-14-reducing-effects-of-slab-shrinkage-and-c.md  chapter-15-references-15-1-referenced-standards-and.md  chapter-15-references-p-360r-53.md  chapter-22-m-r-manufacturers-recommendations-becaus.md  full.md
scripts/: digitize_shrinkage_chart.py
src/slab_designer/: __init__.py  analysis.py  cli.py  loads.py  materials.py  soil.py  units.py
src/slab_designer/design/: __init__.py  frc.py  post_tensioned.py  shrinkage_compensating.py  unreinforced.py
src/slab_designer/web/: __init__.py  app.py
tests/: conftest.py  test_analysis.py  test_appendix_examples.py  test_cli.py  test_frc.py  test_post_tensioned.py  test_public_api.py  test_shrinkage_compensating.py  test_unreinforced.py  test_web.py
