[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slab-designer"
version = "0.1.0"
description = "Concrete slab-on-ground design per ACI 360R-10"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]
dev = [
    "slab-designer[test]",
    "ruff>=0.4",
    "mypy>=1.10",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
slab-designer = "slab_designer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/slab_designer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
packages = ["slab_designer"]
